--- a/applications/default cd/default/src/app/dashboard/charts/bar-chart/bar-chart.component.html
+++ b/applications/default cd/default/src/app/dashboard/charts/bar-chart/bar-chart.component.html
@@ -1,1 +1,11 @@
-<p>bar-chart works!</p>
+<div class="chart-wrapper">
+    <canvas baseChart 
+        [datasets]="dataSet"
+        [labels]="labels"
+        [options]="options"
+        [plugins]="plugins"
+        [legend]="legend"
+        [chartType]="type">
+    </canvas>
+</div>
+
