--- a/applications/default cd/default/src/app/dashboard/charts/line-chart/line-chart.component.html
+++ b/applications/default cd/default/src/app/dashboard/charts/line-chart/line-chart.component.html
@@ -1,1 +1,10 @@
-<p>line-chart works!</p>
+<div class="chart-wrapper">
+    <canvas baseChart 
+        [datasets]="dataSet" 
+        [labels]="labels" 
+        [options]="options"
+        [legend]="legend" 
+        [chartType]="type" 
+        [plugins]="plugins">
+    </canvas>
+</div>
