--- a/applications/default cd/default/src/app/dashboard/charts/bar-chart/bar-chart.component.html
+++ b/applications/default cd/default/src/app/dashboard/charts/bar-chart/bar-chart.component.html
@@ -1,6 +1,6 @@
 <div class="chart-wrapper">
-    <canvas baseChart 
-        [datasets]="dataSet"
+    <canvas baseChart
+        [datasets]="data.averageData"
         [labels]="labels"
         [options]="options"
         [plugins]="plugins"
